# easytrader

./: Makefile  README.md  pyproject.toml
easytrader/miniqmt/: miniqmt_trader.py
