[project]
name = "easytrader"
version = "1.0.0-dev"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncio>=4.0.0",
  "blinker==1.9.0",
  "certifi==2025.8.3",
  "charset-normalizer==3.4.3",
  "click==8.2.1",
  "colorama==0.4.6",
  "comtypes==1.4.12",
  "cssselect==1.3.0",
  "easyutils==0.1.7",
  "flask==3.1.2",
  "flask-sock==0.7.0",
  "idna==3.10",
  "itsdangerous==2.2.0",
  "jinja2==3.1.6",
  "lxml==6.0.1",
  "markupsafe==3.0.2",
  "numpy==2.4.1",
  "pandas==3.0.1",
  "pillow==11.3.0",
  "pyquery==2.0.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "pywinauto==0.6.6",
  "requests==2.32.5",
  "six==1.17.0",
  "tqdm==4.67.1",
  "tzdata==2025.2",
  "urllib3==2.5.0",
  "websockets>=15.0.1",
  "werkzeug==3.1.3",
  "xtquant==250516.1.1",
]
